<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".patientfeedback.RecapFragment">

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/understandDiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:textSize="@dimen/small_text"
        android:textAlignment="center"
        android:text="@string/understood_diagnosis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feelingAboutDiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:textSize="@dimen/small_text"
        android:textAlignment="center"
        android:text="@string/about_your_feelings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/understandDiagnosis" />

    <TextView
        android:id="@+id/doctorRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:textSize="@dimen/small_text"
        android:textAlignment="center"
        android:text="@string/loved_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feelingAboutDiagnosis" />

    <TextView
        android:id="@+id/confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/title_padding"
        android:textSize="@dimen/small_text"
        android:textAlignment="center"
        android:text="@string/if_that_looks_good"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmButton" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_margin="@dimen/title_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>